--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="./style_bg.css">
 
+<meta name="description" content="wassup">
+
+<meta property="og:title" content="mxrio364" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://mxrio.net" />
+<meta property="og:image" content="https://mxrio.net/poopsquarebig.jpg" />
+<meta property="og:description" content="wassup" />
+<meta name="theme-color" content="#8A00F8ff">
+
+<!-- Include this to make the og:image larger -->
+<meta name="twitter:card" content="summary_large_image">
+
 </head>
 
 <body>
