--- a/portfolio.html
+++ b/portfolio.html
@@ -13,9 +13,9 @@
 <body>
 
 <div class="topnav" id="myTopnav">
-  <a href="index.html">About me</a>
-  <a href="livery.html" class="active">Liveries</a>
-  <a href="#about">Other stuff</a>
+  <a href="/">About me</a>
+  <a href="/portfolio" class="active">Portfolio</a>
+  <a href="">Other stuff</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
