--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 <title>mxrio364</title>
 <link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="./style_bg.css">
 
 <meta name="description" content="wassup">
 
@@ -57,7 +56,7 @@
         tooltip.innerHTML = "Click to copy username";
       }
     </script>
-    <a href="livery.html" class="links"><h2>portfolio</h2></a>
+    <a href="/portfolio" class="links"><h2>portfolio</h2></a>
 </div>
 
 <!-- partial:index.partial.html -->
