Updated meta tags for discord embeds on index.html. Added meta tags for discord embeds on portfolio.html.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <meta property="og:url" content="https://mxrio.net" />
 <meta property="og:image" content="https://mxrio.net/poopsquarebig.jpg" />
 <meta property="og:description" content="wassup" />
-<meta name="theme-color" content="#8A00F8ff">
+<meta name="theme-color" content="#8A00F8">
 
 <!-- Include this to make the og:image larger -->
 <meta name="twitter:card" content="summary_large_image">
