--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,19 @@
 <link rel="stylesheet" href="portfoliostyles.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<meta name="description" content="wassup">
+
+<meta property="og:title" content="mxrio364's portfolio" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://mxrio.net/portfolio" />
+<meta property="og:image" content="https://mxrio.net/liveryfiles/img/t_fl.png" />
+<meta property="og:description" content="See my past work on my portfolio." />
+<meta name="theme-color" content="#8A00F8">
+
+<!-- Include this to make the og:image larger -->
+<meta name="twitter:card" content="summary_large_image">
+
 <style>
 .mySlides {display:none}
 .w3-left, .w3-right, .w3-badge {cursor:pointer}
