--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@ SOFTWARE.
 
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - 404 particles page #codepenchallenge</title>
+  <title>404 - Not Found</title>
   <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 <link rel="stylesheet" href="./404files/style.css">
 
