Updated 404 page. Removed repetitive stuff in portfoliostyles.css.

--- a/404.html
+++ b/404.html
@@ -28,19 +28,18 @@ SOFTWARE.
 <head>
   <meta charset="UTF-8">
   <title>404 - Not Found</title>
-  <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-<link rel="stylesheet" href="./404files/style.css">
+<link rel="stylesheet" href="./404styles.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <div id="page-404">
       <div id="title">
-        <h2>Page not found</h2>
+        <h2>Page not found.</h2>
       </div>
       
       <div id="back-to-home">
-        <a href="/">Back to home</a>
+        <a href="/">Back to home?</a>
       </div>
       
         <div id="canvas"></div>
