--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
 <!-- Include this to make the og:image larger -->
 <meta name="twitter:card" content="summary_large_image">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5GD3QFP9B5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5GD3QFP9B5');
+</script>
+
 </head>
 
 <body>
