updates to index and styles removed portfolio

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <title>mxrio364</title>
 <link rel="stylesheet" href="styles.css">
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <meta name="description" content="wassup">
 
 <meta property="og:title" content="mxrio364" />
@@ -44,8 +46,8 @@
 
 <body>
 
-<div id="stuff" class="things">
-    <h1>mxrio364</h1>
+<div id="stuff">
+    <h1 id="mxriotitle">mxrio.net</h1>
     <a href="https://twitter.com/mxrio364" class="links"><h2>twitter</h2></a>
     <div class="tooltip links">
       <h2  onclick="myFunction()" onmouseout="outFunc()" style="display:inline-block; cursor: pointer;">
@@ -55,7 +57,7 @@
     </div>
     <script>
       function myFunction() {
-        navigator.clipboard.writeText("nightmzare#2576");
+        navigator.clipboard.writeText("maario#2576");
         
         var tooltip = document.getElementById("myTooltip");
         tooltip.innerHTML = "Copied!";
@@ -66,7 +68,6 @@
         tooltip.innerHTML = "Click to copy username";
       }
     </script>
-    <a href="/portfolio" class="links"><h2>portfolio</h2></a>
 </div>
 
 <!-- partial:index.partial.html -->
